--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html lang="fr">
-<html>
+<!DOCTYPE html>
+<html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -10,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
+
     <title>Nina Carducci, Photographe à Bordeaux</title>
     <meta
       name="description"
@@ -30,9 +31,9 @@
     <script src="./assets/scripts.js"></script>
   </head>
   <body>
-    <div class="top-header">
-      <h3 class="name">Nina Carducci</h3>
-      <div class="nav">
+    <header class="top-header">
+      <h1 class="name">Nina Carducci</h1>
+      <nav class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
           <li><a href="#gallery">Galerie</a></li>
@@ -43,12 +44,12 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt=""
-            /></a>
+              ><img src="assets/images/instagram.png" alt="logo de instagram" />
+            </a>
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div id="header">
       <div
         id="carouselExampleIndicators"
@@ -82,21 +83,21 @@
             <img
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Portrait de ryoji iwata"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Portrait de nicholas green"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Portrait de edward cisneros."
             />
           </div>
         </div>
@@ -120,9 +121,9 @@
         </button>
       </div>
     </div>
-    <div id="about">
+    <section id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.png" />
+        <img src="./assets/images/nina.png" alt="Portrait de nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -142,59 +143,68 @@
           lumière à chaque fois que vous poserez les yeux sur vos photos.
         </p>
       </div>
-    </div>
-    <div id="gallery">
+    </section>
+    <section id="gallery">
       <h3 class="title">Portfolio</h3>
       <div class="container py-3">
-        <div class="gallery" style="display: none">
+        <div class="gallery">
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+            alt="Portrait de aaron paul"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+            alt="Portrait de ali morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+            alt="Portrait de jason goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+            alt="Portrait de hannah busing"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+            alt="Portrait de ade tunji"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+            alt="Portrait de jakob owens"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+            alt="Portrait de nino van prattenburg"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+            alt="Portrait de austin neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+            alt="Portrait de mateus campos felipe"
           />
         </div>
       </div>
-      <div class="quote">
+      <aside class="quote">
         <figure>
           <blockquote>
             <h1 class="quote__text">
@@ -206,9 +216,9 @@
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
-      </div>
-    </div>
-    <div id="services">
+      </aside>
+    </section>
+    <section id="services">
       <h3 class="title">Mes services</h3>
       <div class="container">
         <div class="service">
@@ -252,8 +262,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="quote">
+    </section>
+    <aside class="quote">
       <figure>
         <blockquote>
           <h1 class="quote__text">
@@ -264,33 +274,32 @@
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
-    </div>
-    <div id="contact">
+    </aside>
+    <footer id="contact">
       <div class="container">
         <div class="form-container">
           <h3>Une question ? Une demande de devis ?</h3>
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
-          <form action="" method="post">
-            <label>Nom</label>
+          <form action="#" method="post">
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
               cols="30"
               rows="10"
             ></textarea>
-            <input type="submit" value="Envoyer" />
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" />
+          <img src="./assets/images/camera.png" alt="Illustration de camera" />
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
