--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_3_11zon.webp"
               class="d-block w-100"
               alt="Portrait de ryoji iwata"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl.webp"
+              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl_4_11zon.webp"
               class="d-block w-100"
               alt="Portrait de nicholas green"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp.webp"
+              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp_5_11zon.webp"
               class="d-block w-100"
               alt="Portrait de edward cisneros."
             />
@@ -123,7 +123,7 @@
     </div>
     <section id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de nina" />
+        <img src="./assets/images/nina_1_11zon.webp" alt="Portrait de nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -151,55 +151,55 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_7_11zon.webp"
             alt="Portrait de aaron paul"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unspl.webp"
+            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unspl_8_11zon.webp"
             alt="Portrait de ali morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unspla.webp"
+            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unspla_9_11zon.webp"
             alt="Portrait de jason goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unspla.webp"
+            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unspla_12_11zon.webp"
             alt="Portrait de hannah busing"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_14_11zon.webp"
             alt="Portrait de ade tunji"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_11_11zon.webp"
             alt="Portrait de jakob owens"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8.webp"
+            src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8_13_11zon.webp"
             alt="Portrait de nino van prattenburg"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplas.webp"
+            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplas_6_11zon.webp"
             alt="Portrait de austin neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY.webp"
+            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY_10_11zon.webp"
             alt="Portrait de mateus campos felipe"
           />
         </div>
@@ -297,7 +297,10 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.webp" alt="Illustration de camera" />
+          <img
+            src="./assets/images/camera_2_11zon.webp"
+            alt="Illustration de camera"
+          />
         </div>
       </div>
     </footer>
