added schema org balise

--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
       rel="stylesheet"
     />
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Nina Carducci",
+        "jobTitle": "Photographe",
+        "image": "https://www.example.com/assets/images/nina.png",
+        "url": "https://nelstatic.github.io/Optimisation/",
+        "sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "68 avenue Alsace-Lorraine, 33200 Bordeaux",
+          "addressCountry": "FR"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Customer Service",
+          "telephone": "+33-5-56-67-78-89",
+          "email": "nina@example.com"
+        }
+      }
+    </script>
+
     <title>Nina Carducci, Photographe à Bordeaux</title>
     <meta
       name="description"
