--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         "jobTitle": "Photographe",
         "image": "https://www.example.com/assets/images/nina.png",
         "url": "https://nelstatic.github.io/Optimisation/",
-        "sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+        "sameAs": [
+          "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+          "https://www.facebook.com/ninacarducci.photo",
+          "https://twitter.com/ninacarducci",
+          "https://www.linkedin.com/in/ninacarducci"
+        ],
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "68 avenue Alsace-Lorraine, 33200 Bordeaux",
