--- a/index.html
+++ b/index.html
@@ -14,31 +14,58 @@
 
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org",
-        "@type": "Person",
+        "@context": "http://schema.org",
+        "@type": "ProfessionalService",
         "name": "Nina Carducci",
-        "jobTitle": "Photographe",
-        "image": "https://www.example.com/assets/images/nina.png",
-        "url": "https://nelstatic.github.io/Optimisation/",
-        "sameAs": [
-          "https://www.instagram.com/ninacarducci.photo/?hl=fr",
-          "https://www.facebook.com/ninacarducci.photo",
-          "https://twitter.com/ninacarducci",
-          "https://www.linkedin.com/in/ninacarducci"
-        ],
+        "alternateName": "Photographer",
+        "image": "./assets/images/nina.png",
+        "url": "https://ninacarducci.github.io/",
         "address": {
           "@type": "PostalAddress",
-          "addressLocality": "68 avenue Alsace-Lorraine, 33200 Bordeaux",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "postalCode": "33200",
+          "addressRegion": "Gironde",
           "addressCountry": "FR"
         },
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "contactType": "Customer Service",
-          "telephone": "+33-5-56-67-78-89",
-          "email": "nina@example.com"
-        }
+        "telephone": "05 56 67 78 89",
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "10:00",
+            "closes": "19:00"
+          }
+        ],
+        "sameAs": ["https://www.instagram.com/ninacarducci.photo"]
       }
     </script>
+    <!--Balises meta facebook-->
+    <meta
+      property="og:title"
+      content="Nina Carducci - Photographe professionnelle"
+    />
+    <meta property="og:url" content="https://ninacarducci.github.io/" />
+    <meta property="og:description" content="Portfolio de Nina Carducci" />
+    <meta property="og:site_name" content="Nina  Carducci" />
+    <meta property="og:type" content="website" />
+
+    <!--Balises meta twitter-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Nina Carducci - Photographe professionnelle"
+    />
+    <meta name="twitter:description" content="Portfolio de Nina Carducci" />
+    <meta name="twitter:image" content="https://exemple.com/image.jpg" />
+    <meta name="twitter:site" content="@NomUtilisateurTwitter" />
+    <meta name="twitter:url" content="https://ninacarducci.github.io/" />
 
     <title>Nina Carducci, Photographe à Bordeaux</title>
     <meta
