fixed mobile fonts

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="carousel-item active">
             <img
               srcset="
-                ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_3_11zon.webp
+                ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp
               "
               class="d-block w-100"
               alt="Portrait de ryoji iwata"
@@ -146,7 +146,7 @@
           <div class="carousel-item">
             <img
               srcset="
-                ./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl_4_11zon.webp
+                ./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl.webp
               "
               class="d-block w-100"
               alt="Portrait de nicholas green"
@@ -155,7 +155,7 @@
           <div class="carousel-item">
             <img
               srcset="
-                ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp_5_11zon.webp
+                ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp.webp
               "
               class="d-block w-100"
               alt="Portrait de edward cisneros."
@@ -184,10 +184,7 @@
     </div>
     <section id="about">
       <div class="picture left">
-        <img
-          srcset="./assets/images/nina_1_11zon.webp"
-          alt="Portrait de nina"
-        />
+        <img srcset="./assets/images/nina.webp" alt="Portrait de nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -380,7 +377,7 @@
         </div>
         <div class="picture right">
           <img
-            srcset="./assets/images/camera_2_11zon.webp"
+            srcset="./assets/images/camera.webp"
             alt="Illustration de camera"
           />
         </div>
