--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              srcset="
+              src="
                 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp
               "
               class="d-block w-100"
@@ -156,7 +156,7 @@
           </div>
           <div class="carousel-item">
             <img
-              srcset="
+              src="
                 ./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl.webp
               "
               class="d-block w-100"
@@ -165,7 +165,7 @@
           </div>
           <div class="carousel-item">
             <img
-              srcset="
+              src="
                 ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp.webp
               "
               class="d-block w-100"
@@ -195,7 +195,7 @@
     </div>
     <section id="about">
       <div class="picture left">
-        <img srcset="./assets/images/nina.webp" alt="Portrait de nina" />
+        <img src="./assets/images/nina.webp" alt="Portrait de nina" />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -223,55 +223,69 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_7_11zon.jpg"
+            src="
+              assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_7_11zon.webp
+            "
             alt="Portrait de aaron paul"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unspl_8_11zon.jpg"
+            src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unspl_8_11zon.webp"
             alt="Portrait de ali morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unspla_9_11zon.jpg"
+            src="
+              assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unspla_9_11zon.webp
+            "
             alt="Portrait de jason goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unspla_12_11zon.jpg"
+            src="
+              ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unspla_12_11zon.webp
+            "
             alt="Portrait de hannah busing"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_14_11zon.jpg"
+            src="
+              ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_14_11zon.webp
+            "
             alt="Portrait de ade tunji"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_11_11zon.jpg"
+            src="
+              ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_11_11zon.webp
+            "
             alt="Portrait de jakob owens"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8_13_11zon.jpg"
+            src="
+              ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8_13_11zon.webp
+            "
             alt="Portrait de nino van prattenburg"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplas_6_11zon.jpg"
+            src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplas_6_11zon.webp"
             alt="Portrait de austin neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY_10_11zon.jpg"
+            src="
+              assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY_10_11zon.webp
+            "
             alt="Portrait de mateus campos felipe"
           />
         </div>
