--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
               src="
                 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp
               "
+              width="1260px"
+              height="680px"
+              style="object-fit: cover"
               class="d-block w-100"
               alt="Portrait de ryoji iwata"
             />
@@ -159,6 +162,9 @@
               src="
                 ./assets/images/slider/nicholas-green-nPz8akkUmDI-unspl.webp
               "
+              width="1260px"
+              height="680px"
+              style="object-fit: cover"
               class="d-block w-100"
               alt="Portrait de nicholas green"
             />
@@ -168,6 +174,9 @@
               src="
                 ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsp.webp
               "
+              width="1260px"
+              height="680px"
+              style="object-fit: cover"
               class="d-block w-100"
               alt="Portrait de edward cisneros."
             />
@@ -195,7 +204,13 @@
     </div>
     <section id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de nina" />
+        <img
+          src="./assets/images/nina.webp"
+          width="340px"
+          height="340px"
+          style="object-fit: cover"
+          alt="Portrait de nina"
+        />
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
@@ -223,6 +238,9 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_7_11zon.webp
             "
@@ -231,12 +249,18 @@
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unspl_8_11zon.webp"
             alt="Portrait de ali morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unspla_9_11zon.webp
             "
@@ -245,6 +269,9 @@
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unspla_12_11zon.webp
             "
@@ -253,6 +280,9 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_14_11zon.webp
             "
@@ -261,6 +291,9 @@
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_11_11zon.webp
             "
@@ -269,6 +302,9 @@
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8_13_11zon.webp
             "
@@ -277,12 +313,18 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplas_6_11zon.webp"
             alt="Portrait de austin neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
+            width="360px"
+            height="360px"
+            style="object-fit: cover"
             src="
               assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY_10_11zon.webp
             "
