--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
             src="./assets/images/camera.webp"
             width="330px"
             height="330px"
+            style="object-fit: cover;"
             alt="Illustration de camera"
           />
         </div>
